--- a/herlink/pubspec.yaml
+++ b/herlink/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.2.1
   intl: ^0.20.2
   flutter_svg: ^2.0.7
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
