--- a/herlink/pubspec.yaml
+++ b/herlink/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.20.2
   flutter_svg: ^2.0.7
   url_launcher: ^6.3.2
+  socket_io_client: ^3.1.3
 
 dev_dependencies:
   flutter_test:
