--- a/herlink/pubspec.yaml
+++ b/herlink/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.7
   url_launcher: ^6.3.2
   socket_io_client: ^3.1.3
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
