--- a/herlink/pubspec.yaml
+++ b/herlink/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.3.2
   socket_io_client: ^3.1.3
   google_sign_in: ^7.2.0
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
